# science-unlicense-lib

./: Cargo.toml  rustfmt.toml
science-unlicense-common/: Cargo.toml
science-unlicense-common/src/: lib.rs
science-unlicense-common/src/api/: asserts.rs  logger.rs  logging.rs  messageerror.rs  mod.rs  module.rs  polymorph.rs  registry.rs
science-unlicense-common/src/api/event/: event.rs  eventmessage.rs  eventsource.rs
science-unlicense-common/src/api/model/: mod.rs  multiplicitytype.rs  presentable.rs  valuetype.rs
science-unlicense-common/src/api/number/: arithmetic.rs  arithmetictype.rs  float32.rs  float64.rs  mod.rs  (+2 more)
science-unlicense-common/src/event/: event.rs  eventlistener.rs  eventsource.rs
science-unlicense-common/src/predicate/: expression.rs  predicate.rs
science-unlicense-demo/: Cargo.toml
science-unlicense-demo/src/: lib.rs  main.rs
science-unlicense-demo/src/image/: createimage.rs  createresource.rs  listformats.rs  mod.rs
science-unlicense-display/: Cargo.toml
science-unlicense-display/src/: lib.rs
science-unlicense-display/src/layout/: layout.rs  layoutconstraint.rs  positionable.rs
science-unlicense-encoding/: Cargo.toml
science-unlicense-encoding/src/: lib.rs
science-unlicense-encoding/src/api/: mod.rs
science-unlicense-encoding/src/api/io/: backtrackread.rs  dataread.rs  datawrite.rs  mod.rs  readable.rs  writable.rs
science-unlicense-encoding/src/api/path/: filepath.rs  mod.rs  path.rs
science-unlicense-encoding/src/api/store/: format.rs  formathandle.rs  formats.rs  mod.rs  resource.rs  resourceset.rs  simpleresource.rs  store.rs
science-unlicense-format-tga/: Cargo.toml
science-unlicense-format-tga/src/: TGAFormat.java  lib.rs  tgaformat.rs  tgareader.rs
science-unlicense-geometry/: Cargo.toml
science-unlicense-geometry/src/: lib.rs
science-unlicense-geometry/src/api/: extentf64.rs  extenti64.rs  mod.rs
science-unlicense-image/: Cargo.toml
science-unlicense-image/src/: lib.rs
science-unlicense-image/src/api/: image.rs  mod.rs
science-unlicense-image/src/imp/: defaultimage.rs
science-unlicense-image/src/impl/: defaultimage.rs
science-unlicense-image/src/tests/: mod.rs
science-unlicense-math/: Cargo.toml
science-unlicense-math/src/: lib.rs
science-unlicense-math/src/api/: datatype.rs  mod.rs  scalar1f32.rs  tuple.rs  vector.rs  vector2u32.rs  vectors.rs
science-unlicense-math/src/system/: samplesystem.rs  samplesystems.rs  undefinedsystem.rs
science-unlicense-math/src/tests/: abstracttupletest.rs  mod.rs  scalar1f32.rs  scalar1f32test.rs
science-unlicense-math/src/tuple/: scalar1f32.rs  tuple.rs  vector.rs  vector2u32.rs  vectors.rs
(+14 files in other folders)
