[package]
name = "science-unlicense-demo"
version = "0.1.0"
edition = "2018"
license = "Unlicense"
authors = ["Johann Sorel"]
homepage = "http://unlicense.science"
repository = "https://github.com/Eclesia/science-unlicense-lib"
keywords = ["science"]
publish = false

[dependencies]
science-unlicense-math = { path = "../science-unlicense-math" }
science-unlicense-geometry = { path = "../science-unlicense-geometry" }