[package]
name = "science-unlicense-format-tga"
version = "0.1.0"
edition = "2018"
license = "Unlicense"
authors = ["Johann Sorel"]
homepage = "http://unlicense.science"
repository = "https://github.com/Eclesia/science-unlicense-lib"
keywords = ["science"]
publish = true

[dependencies]
science-unlicense-encoding = { path = "../science-unlicense-encoding" }
science-unlicense-image = { path = "../science-unlicense-image" }
inventory = "0.1.10"
linkme = "0.2.6"